package com.lft.uml.p1_dependence;

public class Person {
	private Integer id;
	private String name;
	
	public String getName() {
		return name;
	}
	
	public void setName(String name) {
		this.name = name;
	}
}